--- a/languages/cp-tos-en_US.po
+++ b/languages/cp-tos-en_US.po
@@ -1,14 +1,13 @@
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: CP-TOS\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-03-07 21:21+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: \n"
-"Language: \n"
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
+"PO-Revision-Date: 2023-03-07 21:24+0000\n"
+"Last-Translator: \n"
+"Language-Team: English (United States)\n"
+"Language: en_US\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -21,6 +20,8 @@ msgid ""
 "<strong>ERROR</strong>: Du musst den Nutzungsbedingungen zustimmen, um Dich "
 "anmelden zu können."
 msgstr ""
+"<strong>ERROR</strong>: You must agree to the Terms of Service to be able to "
+"login."
 
 #: signup-tos.php:283
 msgid ""
@@ -31,11 +32,16 @@ msgid ""
 "(obwohl es nicht funktionsfähig ist), indem Du dem Shortcode das "
 "entsprechende Argument hinzufügst [signup-tos checkbox=\"1\"]."
 msgstr ""
+"Please enter the text for your terms of use here. It will appear on the wp-"
+"signup.php multisite page or in the BuddyPress signup form. You can also use "
+"the [signup-tos] shortcode in your posts or pages. Note that you can check "
+"the checkbox (although it is not functional) by adding the appropriate "
+"argument [signup-tos checkbox=\"1\"] to the shortcode."
 
 #. Name of the plugin
 #: signup-tos.php:80
 msgid "CP-TOS"
-msgstr ""
+msgstr "CP-TOS"
 
 #. Description of the plugin
 msgid ""
@@ -43,39 +49,42 @@ msgid ""
 "Anmeldeformular für CP Seiten, CP Multisite oder BuddyPress und zwingt den "
 "Benutzer, das zugehörige Kontrollkästchen zu aktivieren, um fortzufahren"
 msgstr ""
+"This plugin places a Terms of Use field on the CP Pages, CP Multisite or "
+"BuddyPress signup form and forces the user to select the associated checkbox "
+"to proceed"
 
 #: signup-tos.php:217 signup-tos.php:240
 msgid "Du musst den Nutzungsbedingungen zustimmen, um Dich anmelden zu können."
-msgstr ""
+msgstr "You must agree to the Terms of Service to be able to log in."
 
 #: signup-tos.php:270
 msgid "Einstellungen gespeichert."
-msgstr ""
+msgstr "Settings saved."
 
 #. Author URI of the plugin
 msgid "https://n3rds.work"
-msgstr ""
+msgstr "https://n3rds.work"
 
 #. URI of the plugin
 msgid "https://n3rds.work/piestingtal_source/ps-nutzungsbedingungen-plugin/"
-msgstr ""
+msgstr "https://n3rds.work/piestingtal_source/ps-nutzungsbedingungen-plugin/"
 
 #: signup-tos.php:173
 msgid "Ich  stimme zu"
-msgstr ""
+msgstr "I agree"
 
 #: signup-tos.php:137
 msgid "Ich stimme zu"
-msgstr ""
+msgstr "I agree"
 
 #: signup-tos.php:118 signup-tos.php:170 signup-tos.php:276
 msgid "Nutzungsbedingungen"
-msgstr ""
+msgstr "Terms of Service"
 
 #. Author of the plugin
 msgid "WMS N@W"
-msgstr ""
+msgstr "WMS N@W"
 
 #: signup-tos.php:292
 msgid "Änderungen speichern"
-msgstr ""
+msgstr "Save Changes"
